2005-08-26  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/registry.c (rt_registry_enter): Add a few
	micro-optimizations.

	* arch/generic/hal/generic.c: Move locking statistics support to
	the nucleus where it actually belongs to.

	* include/nucleus/asm-generic/system.h (xnlock_put_irqrestore):
	Simplify locking scheme used to collect hotspots.

	* nucleus/pipe.c (xnpipe_read_wait): Do not hold the nucleus lock
	across preemptible sections that may reschedule on exit,
	specifically with SMP configurations.

2005-08-26  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/posix/timer.c: Finished POSIX timers implementation.

	* skins/posix/signal.c: Replace "reliable" POSIX signals with
	"real-time" POSIX signals, add support for sigqueue, sigtimedwait,
	sigwaitinfo and SA_SIGINFO sigaction flag.

2005-08-25  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-ppc/system.h (xnarch_enable_fpu): Already
	working since FPU status bit is saved and restored when preempting
	and reentering user-space.

	* include/nucleus/asm-i*/system.h (xnarch_enable_fpu): Do not
	enable FPU when reentering a root thread which had not used the
	FPU.

2005-08-25  Dmitry Adamushko  <dmitry.adamushko@datacon.at>
 
 	* skins/rtai/alarm.c (__alarm_read_proc): Add /proc export
 	information.
 
2005-08-25  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/module.c (sched_seq_open, stat_seq_open): Make sure that
	the nklock is being held for the shortest possible time, so that
	dumping the associated /proc files with lots of entries won't
	cause massive jittery.

2005-08-24  Jim Cromie <jcromie@divsol.com>

	* scripts/rtai-test.in: Extend with pre & post load-tests.

2005-08-23  Dmitry Adamushko  <dmitry.adamushko@gmail.com>

	* skins/rtai/registry.c (rt_registry_bind): Allow unblockable
	contexts to try-and-fail binding to a non-registered object,
	instead of always bailing out on -EPERM error.

2005-08-22  Philippe Gerum  <rpm@xenomai.org>
